--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         </repository>
     </repositories>
 
-
     <name>IngSw2020</name>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -45,6 +44,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
