Aggiunto servizio RESTFUL per accedere al REALTIME Database di Firebase Modificati encoder e decoder JSON per avere i JSON da firebase (Decoder) e avere le userList (Creation) Aggiunta ENUM di notifiche Aggiunta libreria APACHE Fluent per richieste HTTP di firebase Spring controller settato per accettare suggerimenti di liste e di film Classe user modificata per avere JSON Constructor ed essere coerente con i dati che ci servono UserList modificata per avere la dependency_List
Sto commit non finiva più

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,14 @@
             <artifactId>themoviedbapi</artifactId>
             <version>1.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
     </dependencies>
+
 
     <groupId>groupId</groupId>
     <artifactId>IngSw2020Server</artifactId>
